--- a/SteelgoWebAppSolutions/FrontEndSAM/Views/Pintura/CargaCarro.cshtml
+++ b/SteelgoWebAppSolutions/FrontEndSAM/Views/Pintura/CargaCarro.cshtml
@@ -42,13 +42,13 @@
                             <div class="dropdown action-group">
                                 <a id="Acciones" data-target="#" href="#" data-toggle="dropdown" role="button" ariahaspopup="true" aria-expanded="false" class="btn btn-default">
                                     <span id="botonAcciones1"></span>
-                                    <span class="caretBlue"></span>
+                                   <span class="caretBlue"></span>
                                 </a>
                                 <ul class="dropdown-menu" aria-labelledby="Acciones">
                                     <li>
-                                        <a href="#" id="btnCerrarCarro">
+                                        <!--<a href="#" id="btnCerrarCarro">
                                             <span id="PinturaBotonCerrarCarroSup"></span>
-                                        </a>
+                                        </a>-->
                                     </li>
                                 </ul>
                             </div>
@@ -206,7 +206,9 @@
                             <span class="caretBlue"></span>
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="Acciones">
-                            <li><a href="#" id="btnCerrarCarro1"><span id="PinturaBotonCerrarCarroInf"></span></a></li>
+                            <li>
+                                <!--<a href="#" id="btnCerrarCarro1"><span id="PinturaBotonCerrarCarroInf"></span></a>-->
+                            </li>
                         </ul>
                     </div>
                 </div>
