--- a/SteelgoWebAppSolutions/FrontEndSAM/Views/PND/RequisicionPND.cshtml
+++ b/SteelgoWebAppSolutions/FrontEndSAM/Views/PND/RequisicionPND.cshtml
@@ -36,7 +36,7 @@
                     <a id="btnCancelar" class="btn btn-black"><span id="botonCancelar"></span></a>
                 </div>
                 <div id="GenerarRequisicionASignarRequisicionDivSup" class="button-section">
-                    <a id="GenerarRequisicionASignarRequisicionSup" href="~/PND/AsignarRequisicion" class="btn btn-primary"><span id="GenerarRequisicionAsignarRequisicion"></span></a>
+                    <a id="GenerarRequisicionASignarRequisicionSup" href="@Url.Action("AsignacionRequisicion", "ServiciosTecnicos")" class="btn btn-primary"><span id="GenerarRequisicionAsignarRequisicion"></span></a>
                 </div>
                 <div class="button-section actionButtonSection">
                     <div class="dropdown action-group">
@@ -54,30 +54,41 @@
     <div id="FieldSetView">
         @*Controles Superior*@
         <div class="row" id="AgregadoDiv">
-            <div class="col-sm-6 col-md-4 col-lg-2 altoControl">
-                <label id="CapturaArmadoHeaderMostrar"></label>
-                <input type="radio" name="Muestra" style=" width:auto;" value="SinCaptura" /><span id="GenerarRequisicionMuestraSinCaptura"></span>
-                <input type="radio" name="Muestra" style=" width:auto;" value="Todos" /><span id="CapturaArmadoTodos"> </span>
+            <div class="col-sm-6 col-md-4 col-lg-3 altoControl" id="ProyectoDiv">
+                <label id=""><span id="GenerarRequisicionProyecto"></span></label>
+                <input id="Proyecto" class="" />
             </div>
             <div class="col-sm-6 col-md-4 col-lg-2 altoControl">
                 <label id=""><span id="ListaRequisicionFolio"></span></label>
-                <label id="Folio">Sin asignar</label>
-            </div>
-            <div class="col-sm-6 col-md-4 col-lg-2 altoControl" id="ProyectoDiv">
-                <label id=""><span id="GenerarRequisicionProyecto"></span></label>
-                <input id="Proyecto" class="" />
+                <input id="listaFolio" class="" />
             </div>
             <div class="col-sm-6 col-md-4 col-lg-2 altoControl" id="PruebaDiv">
                 <label id=""><span id="ListaRequisicionPrueba"></span></label>
                 <input id="tipoPrueba" class="" />
             </div>
+            <div class="col-sm-6 col-md-4 col-lg-2 altoControl">
+                <label id="CapturaArmadoHeaderMostrar"></label>
+                <input type="radio" name="Muestra" style=" width:auto;" value="SinCaptura" /><span id="GenerarRequisicionMuestraSinCaptura"></span>
+                <input type="radio" name="Muestra" style=" width:auto;" value="Todos" /><span id="CapturaArmadoTodos"> </span>
+            </div>
+            @*<div class="col-sm-6 col-md-4 col-lg-3 altoControl">
+                
+            </div>
+            <div class="col-sm-6 col-md-4 col-lg-2 altoControl" id="PruebaDiv">
+                <label id=""><span id="ListaRequisicionClasificacion"></span></label>
+                <input id="tipoClasificacion" class="" />
+            </div>
+            <div class="col-sm-6 col-md-4 col-lg-3 altoControl">
+                <label id=""><span id="ListaRequisicionCodigo"></span></label>
+                <input id="Codigo" class="" />
+            </div>
+            <div class="col-sm-6 col-md-4 col-lg-4 altoControl">
+                <label id=""><span id="ListaRequisicionObservacion"></span></label>
+                <input id="Observacion" class="general-input" />
+            </div>*@
             <div class="col-sm-6 col-md-4 col-lg-2 altoControl" id="FechaDiv">
                 <label id=""><span id="ListaRequisicionFecha"></span></label>
                 <input id="Fecha" class="" />
-            </div>
-            <div class="col-sm-6 col-md-4 col-lg-2 altoControl">
-                <label id=""><span id="ListaRequisicionObservacion"></span></label>
-                <input id="Observacion" class="general-input" />
             </div>
         </div>
         @*GRID*@
