--- a/SteelgoWebAppSolutions/FrontEndSAM/Views/PND/AsignacionRequisicion.cshtml
+++ b/SteelgoWebAppSolutions/FrontEndSAM/Views/PND/AsignacionRequisicion.cshtml
@@ -50,17 +50,20 @@
     @*Controles Superior*@
     <div id="FieldSetView" class="row addedSectionInLineWithoutColor">
 
-        <div class="col-sm-2 col-md-2 col-lg-2">
-            <label id="CapturaHeaderMostrar"></label>
-            <input type="radio" name="Muestra" style=" width:auto;" value="Sin Capturar" />&nbsp;<span id="CapturaSinAsinar"></span>&nbsp;
-            <input type="radio" name="Muestra" style=" width:auto;" value="Todos" />&nbsp;<span id="CapturaTodos"> </span>
-
+        
+        <div class="col-sm-3 col-md-3 col-lg-3">
+            <label id="ServiciosTecnicosProyecto"></label>
+            <input id="inputProyecto" class="" />
         </div>
         <div class="col-sm-2 col-md-2 col-lg-2">
             <label id="AsignarRequisicionHeaderPrueba"></label>
             <input id="inputPrueba" class="" />
         </div>
-
+        <div class="col-sm-2 col-md-2 col-lg-2">
+            <label id="CapturaHeaderMostrar"></label>
+            <input type="radio" name="Muestra" style=" width:auto;" value="Sin Capturar" />&nbsp;<span id="CapturaSinAsinar"></span>&nbsp;
+            <input type="radio" name="Muestra" style=" width:auto;" value="Todos" />&nbsp;<span id="CapturaTodos"> </span>
+        </div>
 
     </div>
     @*GRID*@
