--- a/SteelgoWebAppSolutions/FrontEndSAM/Views/Pintura/CargaCarro.cshtml
+++ b/SteelgoWebAppSolutions/FrontEndSAM/Views/Pintura/CargaCarro.cshtml
@@ -60,11 +60,11 @@
         </div>
     </div>
     <div class="row">
-        <div class="col-sm-3 col-md-3 col-lg-3" id="InputProyectoDiv">
+        <div class="col-xs-12 col-sm-3 col-md-3 col-lg-3" id="InputProyectoDiv">
             <label id="ServiciosTecnicosProyecto"></label>
             <input id="inputProyecto" />
         </div>
-        <div class="col-xs-12 col-sm-3 col-md-3 col-lg-3">
+        <div class="col-xs-12 col-sm-3 col-md-3 col-lg-2">
             <div id="tipoVista" class="btn-group " data-toggle="buttons" role="group">
                 <label>&nbsp;</label>
                 <div class="btn btn-primary" id="styleEscritorio">
@@ -74,6 +74,11 @@
                     <input type="radio" name="TipoVista" style=" width:auto;" value="Patio" /><span id="PinturaCargaCarroPatio"> </span>
                 </div>
             </div>
+        </div>
+        <div class="col-xs-12 col-sm-3 col-md-3 col-lg-2" id="MostrarDiv">
+            <label id="PinturaCargaMostrar"></label>
+            <input type="radio" name="Muestra" style="width:auto; margin:4px auto 0;" value="0" />&nbsp;<span id="PinturaCargaSinCaptura"></span>&nbsp;
+            <input type="radio" name="Muestra" style="width:auto; margin:4px auto 0;" value="1" />&nbsp;<span id="PinturaCargaTodos"> </span>
         </div>
     </div>
     <div class="row">
@@ -94,11 +99,11 @@
                 <label id="PinturaBotonCerrarCarro3"></label>
                 <input type="checkbox" name="Cerrar2" style=" width:auto;" id="chkCerrar2" />
             </div>
-            <div class="col-sm-2 col-md-2 col-lg-2">
+            <div class="col-sm-1 col-md-1 col-lg-1">
                 <label id="PinturaCargaArea"></label>
                 <label id="labelM2" />
             </div>
-            <div class="col-sm-2 col-md-2 col-lg-2">
+            <div class="col-sm-1 col-md-1 col-lg-1">
                 <label id="PinturaCargaToneladas"></label>
                 <label id="labelToneladas" />
             </div>
@@ -138,10 +143,7 @@
                 </div>
             </div>
             <input id="hdAccionFiltrado" type="hidden" />
-        </div>
-
-
-        <div id="window"></div>
+        </div>        
     </div>
 
     <div id="contenedorPrincipalCargaCarroBacklog">
@@ -155,11 +157,11 @@
                 <label id="PinturaBotonCerrarCarro2"></label>
                 <input type="checkbox" name="Cerrar" style=" width:auto;" id="chkCerrar" />
             </div>
-            <div class="col-sm-2 col-md-2 col-lg-2">
+            <div class="col-sm-1 col-md-1 col-lg-1">
                 <label id="PinturaCargaArea2"></label>
                 <label id="labelM22" />
             </div>
-            <div class="col-sm-2 col-md-2 col-lg-2">
+            <div class="col-sm-1 col-md-1 col-lg-1">
                 <label id="PinturaCargaToneladas2"></label>
                 <label id="labelToneladas2" />
             </div>
@@ -253,6 +255,23 @@
     </div>
 
 
+</div>
+<div id="windowDownload" style="display:none;">
+    <div class="row" style="margin:0px">
+        <span id="mensajeDescargaSpoolPinturaCarga"></span><br /><br />
+        <div class="col-xs-5 col-sm-5 col-md-5 col-lg-5">
+            <input id="inputCuadrantePopup" />
+        </div>
+        <br /><br />
+        <div class="col-xs-10 col-sm-10 col-md-10 col-lg-10">
+            <button type="button" class='confirm_yes btn btn-blue' id="btnDescargar">
+                <span id="PinturaCargaDescargar"></span>
+            </button>
+            <button type="button" class='confirm_yes btn btn-blue' id='btnCerrarPopup'>
+                <span id="PinturaCargaCerrarPopup"></span>
+            </button>
+        </div>
+    </div>
 </div>
 
 <script type="text/javascript" src="~/Scripts/AppComponents/Pintura/CargaCarro/Render.js"></script>
