Cambio de consulta y vista del módulo Requisicion PND

--- a/SteelgoWebAppSolutions/FrontEndSAM/Views/PND/RequisicionPND.cshtml
+++ b/SteelgoWebAppSolutions/FrontEndSAM/Views/PND/RequisicionPND.cshtml
@@ -58,13 +58,13 @@
                 <label id=""><span id="GenerarRequisicionProyecto"></span></label>
                 <input id="Proyecto" class="" />
             </div>
-            <div class="col-sm-6 col-md-4 col-lg-2 altoControl">
-                <label id=""><span id="ListaRequisicionFolio"></span></label>
-                <input id="listaFolio" class="" />
-            </div>
-            <div class="col-sm-6 col-md-4 col-lg-2 altoControl" id="PruebaDiv">
+            <div class="col-sm-6 col-md-4 col-lg-3 altoControl" id="PruebaDiv">
                 <label id=""><span id="ListaRequisicionPrueba"></span></label>
                 <input id="tipoPrueba" class="" />
+            </div>
+            <div class="col-sm-6 col-md-4 col-lg-2 altoControl">
+                <label id=""><span id="ValidacionResultadosRequisicion"></span></label>
+                <input id="listaFolio" class="" />
             </div>
             <div class="col-sm-6 col-md-4 col-lg-2 altoControl">
                 <label id="CapturaArmadoHeaderMostrar"></label>
@@ -86,10 +86,6 @@
                 <label id=""><span id="ListaRequisicionObservacion"></span></label>
                 <input id="Observacion" class="general-input" />
             </div>*@
-            <div class="col-sm-6 col-md-4 col-lg-2 altoControl" id="FechaDiv">
-                <label id=""><span id="ListaRequisicionFecha"></span></label>
-                <input id="Fecha" class="" />
-            </div>
         </div>
         @*GRID*@
         <div class="row addedSectionInLine">
