Cambios : en el diccionario. El css override para alinear las columnas del footer

--- a/SteelgoWebAppSolutions/FrontEndSAM/Content/Styles/overrides.css
+++ b/SteelgoWebAppSolutions/FrontEndSAM/Content/Styles/overrides.css
@@ -1249,3 +1249,7 @@ button[data-bind="visible:operatorVisible"] {
     border:none!important;
     box-shadow:none;
 }
+
+.k-grid-footer{
+    padding-right: 0px!important;
+}
