Cambio de etiquetas para Requisicion PND y Pintura. Se corrigen tamaños en el grid Requisicion.

--- a/SteelgoWebAppSolutions/FrontEndSAM/Views/ServiciosTecnicos/GenerarRequisicion.cshtml
+++ b/SteelgoWebAppSolutions/FrontEndSAM/Views/ServiciosTecnicos/GenerarRequisicion.cshtml
@@ -152,6 +152,6 @@
 
 <script>
     @section JavascriptDocumentReadyFunctions {
-    $authorizationModel["Generar Requisicion"] = $GenerarRequisicionModel;
+    $authorizationModel["GenerarRequisicion"] = $RequisicionPND;
     }
 </script>
