--- a/SteelgoWebAppSolutions/FrontEndSAM/Views/Pintura/CargaCarro.cshtml
+++ b/SteelgoWebAppSolutions/FrontEndSAM/Views/Pintura/CargaCarro.cshtml
@@ -82,7 +82,7 @@
         </div>
     </div>
     <div class="row">
-        <div class="col-sm-3 col-md-3 col-lg-3" id="InputProyectoDiv">
+        <div class="col-sm-3 col-md-3 col-lg-3">
             <label id="">&nbsp;</label>
             
         </div>
@@ -97,7 +97,7 @@
             </div>
             <div class="col-sm-2 col-md-2 col-lg-2">
                 <label id="PinturaBotonCerrarCarro3"></label>
-                <input type="checkbox" name="Cerrar2" style=" width:auto;" id="chkCerrar2" />
+                <input type="checkbox" name="Cerrar2" style="width:auto;" id="chkCerrar2" />
             </div>
             <div class="col-sm-1 col-md-1 col-lg-1">
                 <label id="PinturaCargaArea"></label>
