--- a/SteelgoWebAppSolutions/FrontEndSAM/Content/Styles/entities.css
+++ b/SteelgoWebAppSolutions/FrontEndSAM/Content/Styles/entities.css
@@ -694,6 +694,10 @@ header .menu > div {
     background-image: url("/Content/images/SAMC_DashboardIcon_02.png");
 }
 
+.Reporting {
+    background-image: url("/Content/images/SAMC_DashboardIcon_14.png");
+}
+
 .catalog {
     background-image: url("/Content/images/SAMC_DashboardIcon_03.png");
 }
