--- a/SteelgoWebAppSolutions/FrontEndSAM/Views/Pintura/CargaCarro.cshtml
+++ b/SteelgoWebAppSolutions/FrontEndSAM/Views/Pintura/CargaCarro.cshtml
@@ -149,7 +149,7 @@
     <div id="contenedorPrincipalCargaCarroBacklog">
         @*Controles Superior*@
         <div class="row addedSection" id="FieldSetView">
-            <div class="col-sm-3 col-md-3 col-lg-3" id="InputCarroDiv">
+            <div class="col-sm-3 col-md-3 col-lg-3" id="InputCarroBackDiv">
                 <label id="PinturaCargaBackLogCarro"></label>
                 <input id="inputCarroBacklog" class="" />
             </div>
