--- a/SteelgoWebAppSolutions/FrontEndSAM/Views/Reportes/ObtenerReportes.cshtml
+++ b/SteelgoWebAppSolutions/FrontEndSAM/Views/Reportes/ObtenerReportes.cshtml
@@ -1,4 +1,6 @@
-﻿@using ReportViewerForMvc;
+﻿
+
+@using ReportViewerForMvc;
 
 @{
     Layout = "~/Views/Shared/_Layout.cshtml";
@@ -8,60 +10,16 @@
     <li>
         <a href="@Url.Action("landing", "Home")"><span id="lblInicio"></span></a>
     </li>
-    
+
     <li class="active">
-        <a href="@Url.Action("ObtenerReportes", "Reportes")"><span id="Reportes"></span></a>
+        <a href="#"><span id="Reportes"></span></a>
     </li>
 }
 
-<style>
-
-    #ReportViewer1_ctl04_ctl00 { 
-
-        background-color: green !important;
-        border: none;
-        color: white; 
-
-    }
-
-</style>
-
-<div id="mipatron">
-    
-    @Html.ReportViewer(ViewBag.ReportViewer as Microsoft.Reporting.WebForms.ReportViewer, new { scrolling = "yes", width = "100%" , height="auto" }))
-
-</div>
-
-<script>
- 
-       /* $("#reportViewerReportes")
-
-        var elementos = document.getElementById("mipatron");
-        var iframe = elementos[0];   */
-
-    function xdxd() {
-
-        var obtid = $('#mipatron').children().attr("id");
-      
-
-        $("#" + obtid + "").contents().find("#ReportViewer1_ctl04_ctl00").attr("style", "color:white;background:orange;border:none;");
-
-    }
-
-    var obtid = $('#mipatron').children().attr("id");
-
-    $('#'+obtid+'').load(function () {
-        xdxd();
-    });
-     
-    
-
-    $('#ReportViewer1_ctl04_ctl00').click(function (e) {
-        xdxd();
-    }); 
-
-
-
-
-
-</script>
+@Html.ReportViewer(ViewBag.ReportViewer as Microsoft.Reporting.WebForms.ReportViewer, new
+{
+    scrolling = "yes",
+    width = "100%",
+    height = "auto",
+    style = "border: 0px; margin: 0px; padding: 0px;"
+})
